[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ruythcoref"
version = "1.0.0"
description = "A Python library to convert files between txt, csv, json, docx, pdf, xml"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "ruythbot_huy", email = "example@example.com" }]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.dependencies]
pandas = ">=1.3.0"
python-docx = ">=0.8.11"
PyPDF2 = ">=3.0.0"
fpdf = ">=1.7.2"

[project.urls]
Documentation = "https://ruythcore.vercel.app/docs/ruythcoref"
Homepage = "https://github.com/huy746/ruyth-core"
"Issue tracker" = "https://github.com/huy746/ruyth-core/issues"

[tool.setuptools.packages.find]
where = ["ruythcore"]
